--- a/app/global.css
+++ b/app/global.css
@@ -3,18 +3,20 @@
 @tailwind utilities;
 
 html {
-  margin: 0;
   width: 100%;
   height: 100%;
-  display: flex;
+  display: grid;
   justify-content: center;
   font-size: 18px;
   font-family: var(--space-grotesk);
+  background-color: orange;
 }
 
 body {
   margin: 0;
   background-color: black;
-  display: flex;
+  width: 100%;
+  height: 100%;
+  display: grid;
   justify-content: center;
 }
